--- a/app-node/package.json
+++ b/app-node/package.json
@@ -7,7 +7,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "bcrypt": "^5.0.1"
+    "bcrypt": "^5.0.1",
+    "exceljs": "^4.4.0",
+    "express": "^4.18.2"
   }
 }
