--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     volumes:
       - ./app-node:/usr/src/app # Mount thư mục app-node vào container
       - /usr/src/app/node_modules
+      - ./data:/usr/src/app/data
     networks:
       - app-network
 
